# monpetitsalon-src

./: .gitignore  Dockerfile  LICENSE  README.md  poetry_cheatsheet.md  pyproject.toml  requirements.txt
.github/workflows/: test-and-publish.yml
src/monpetitsalon/: agents.py  dag.py  driver.py  etl.py  etl_dag.py  parsers.py  query.py  scrapers.py  utils.py
tests/: test_driver.py  test_etl.py  test_parsers.py
tests/data/: cards.html  cards.json  detail.html  detail.json
