[tool.poetry]
name = "monpetitsalon"
version = "0.0.1"
description = ""
authors = ["zqriouet <zqriouet@gmail.com>"]
readme = "README.md"
packages = [{include = "monpetitsalon", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.3"
lxml = "^5.1.0"
pendulum = "2.1.2"
webdriver-manager = "^4.0.1"
selenium = "^4.18.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
pytest-rerunfailures = "^14.0"
jupyter = "^1.0.0"
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
